Added schema attribute to the default json namespace

--- a/example/configexample.json
+++ b/example/configexample.json
@@ -25,7 +25,8 @@
       "schema":
       {
         "srctype":"predefined",
-        "src":"openschema"
+        "src":"openschema",
+        "schemaattr":"schema"
       }
     },
     "jsonschema":
